add ner api to send message to feishu receiver
